@@ -4,6 +4,7 @@ import gg.generations.imct.scvi.flatbuffers.Titan.Model.SVModel;
 
 import java.io.IOException;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 
 public class IMCT {
@@ -26,7 +27,7 @@ public class IMCT {
 //            }
 //        });
 
-        var folder = Files.exists(Paths.get("C:\\users\\hydos")) ? Paths.get("F:/PokemonModels/SV/pokemon/data/pm0053/pm0053_00_00") : Paths.get("pm0053_00_00");
+        var folder = Path.of("C:\\Users\\water\\Downloads\\pm0006_00_00");
         var model = new SVModel(folder);
         var outModel = Paths.get("out.glb");
         model.writeModel(outModel);
